--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <version>1.0.2-BUILD-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.eclipse.californium</groupId>
+            <artifactId>californium-core</artifactId>
+            <version>2.2.1</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
